--- a/src/pages/about-us.pug
+++ b/src/pages/about-us.pug
@@ -6,94 +6,120 @@ head
     link(rel='stylesheet', type='text/css', href='styles/main.css')
 body
     section.header.header_dark-bg
-        .container.header__content
-            .header__left
-                .header__company-name Wapik
-                .header__phone-number
-                    span.header__phone-icon &#xf4b9;
-                    |+62 202 555 0117
-            .header__right
-                .header__navigation
-                    ul.navigation.navigation_light
-                        li.navigation__item
-                            a.link(href='index.html') Home
-                        li.navigation__item
-                            a.link(href='about-us.html') About us
-                        li.navigation__item
-                            a.link(href='pricing.html') Pricing
-                        li.navigation__item
-                            a.link(href='contact-us.html') Contact us
-                        button.button.header__get-started-button.button_hover-transparent(name='Get started',value='Get started') Get started
+        .container
+            .header__content
+                .header__left
+                    .header__company-name Wapik
+                    .header__phone-number
+                        span.header__phone-icon &#xf4b9;
+                        |+62 202 555 0117
+                .header__right
+                    .header__navigation
+                        ul.navigation.navigation_light
+                            li.navigation__item
+                                a.link(href='index.html') Home
+                            li.navigation__item
+                                a.link(href='about-us.html') About us
+                            li.navigation__item
+                                a.link(href='pricing.html') Pricing
+                            li.navigation__item
+                                a.link(href='contact-us.html') Contact us
+                            button.button.header__get-started-button.button_hover-transparent(name='Get started',value='Get started') Get started
     section.masthead-about-us
-        .container.masthead-about-us__content
-            .masthead-about-us__caption
-                .masthead-about-us__header Cras justo odio, dapibus ac facilisis in egestas eget quam
-                button.masthead__learn-more-button.button.button_green.button_hover-transparent(name="Start your free trial", value="Start your free trial") Start your free trial
+        .container
+            .masthead-about-us__content
+                .masthead-about-us__caption
+                    .masthead-about-us__header Cras justo odio, dapibus ac facilisis in egestas eget quam
+                    button.masthead__learn-more-button.button.button_green.button_hover-transparent(name="Start your free trial", value="Start your free trial") Start your free trial
     section.about-us
-        .container.about-us__content
-            .section__heading
-                .section__title About us
-                .section__underline
-                .section__description Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Nullam id dolor id nibh ultricies vehicula ut id elit. Vestibulum id ligula porta felis euismod semper. Donec ullamcorper nulla non metus auctor fringilla.
-            .about-us__best-features
-                .best-features__feature
-                    .best-features__icon &#xf14b;
-                    .best-features__header Ionicons
-                    .best-features__description Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Aenean eu leo quam. Pellentesque ornare sem.
-                .best-features__feature
-                    .best-features__icon &#xf430;
-                    .best-features__header Creative Design
-                    .best-features__description Maecenas faucibus mollis interdum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
-                .best-features__feature
-                    .best-features__icon &#xf3c9;
-                    .best-features__header Photoshop and Sketch
-                    .best-features__description Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Maecenas sed diam eget risus varius blandit sit amet non magna.
-    section.call-to-action
-        .container.call-to-action__content
-            .call-to-action__caption
-                .call-to-action__header Do You Like Wapik? Download it Now
-                .call-to-action__description Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.
-            button.button.call-to-action__download-button.button_green.button_hover-green(name="Download now", value="Download now") download now! - FREE forever
+        .container
+            .about-us__content
+                .section__heading
+                    .section__title About us
+                    .section__underline
+                    .section__description Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Nullam id dolor id nibh ultricies vehicula ut id elit. Vestibulum id ligula porta felis euismod semper. Donec ullamcorper nulla non metus auctor fringilla.
+                .about-us__best-features
+                    .best-features__feature
+                        .best-features__icon &#xf14b;
+                        .best-features__header Ionicons
+                        .best-features__description Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Aenean eu leo quam. Pellentesque ornare sem.
+                    .best-features__feature
+                        .best-features__icon &#xf430;
+                        .best-features__header Creative Design
+                        .best-features__description Maecenas faucibus mollis interdum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
+                    .best-features__feature
+                        .best-features__icon &#xf3c9;
+                        .best-features__header Photoshop and Sketch
+                        .best-features__description Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Maecenas sed diam eget risus varius blandit sit amet non magna.
+    section.our-team
+        .container
+            .our-team__content
+                .section__heading
+                    .section__title Meet Our Team
+                    .section__underline
+                    .section__description Curabitur blandit tempus porttitor. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                .our-team__teammates
+                    .our-team__teammate.teammate
+                        .teammate__photo.teammate__photo_first
+                        .teammate__name Joyce Hudson
+                        .teammate__position Founder &amp;Designer
+                    .our-team__teammate.teammate
+                        .teammate__photo.teammate__photo_second
+                        .teammate__name Angela Campbell
+                        .teammate__position Project Manager
+                    .our-team__teammate.teammate
+                        .teammate__photo.teammate__photo_third
+                        .teammate__name James Walker
+                        .teammate__position Developer
+    section.call-to-action.call-to-action_bg-green
+        .container
+            .call-to-action__content
+                .call-to-action__caption
+                    .call-to-action__header.call-to-action__header_light Do You Like Wapik? Download it Now
+                    .call-to-action__description.call-to-action__description_light Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.
+                button.button.call-to-action__download-button.button_dark-green.button_hover-transparent(name="Download now", value="Download now") download now! - FREE forever
     section.footer
-        .container.footer__content
-            .footer__column.column
-                .column__header Wapik
-                .column__data-row @: 
-                    span.column__email-address hi@wapik.com
-                .column__data-row p: +62 202 555 0117
-                .column__data-row.address a: 610 Overlook Circle Suite 323 Kalamazoo, MI 49009
-            .footer__column.column
-                .column__header Company
-                .column__data-row
-                    a.link(href="/") Home
-                .column__data-row
-                    a.link(href="about-us.html") About Us
-                .column__data-row
-                    a.link(href="pricing.html") Pricing
-                .column__data-row
-                    a.link(href="contact-us.html") Contact Us
-            .footer__column.column
-                .column__header Others
-                .column__data-row
-                    a.link(href="") Help &amp; Support
-                .column__data-row
-                    a.link(href="") Privacy Policy
-                .column__data-row
-                    a.link(href="") Terms
-                .column__data-row
-                    a.link(href="") Sitemap
-            .footer__column.column
-                .column__header Newsletter
-                .column__description Subscribe to our newsletter and get all the cool news
-                form.footer__email-field(action="")
-                    input.footer__email.link(type="email", placeholder="Enter Email", id="email")
-                    button.footer__email-submit-button &#xf473;
+        .container
+            .footer__content
+                .footer__column.column
+                    .column__header Wapik
+                    .column__data-row @: 
+                        span.column__email-address hi@wapik.com
+                    .column__data-row p: +62 202 555 0117
+                    .column__data-row.address a: 610 Overlook Circle Suite 323 Kalamazoo, MI 49009
+                .footer__column.column
+                    .column__header Company
+                    .column__data-row
+                        a.link(href="/") Home
+                    .column__data-row
+                        a.link(href="about-us.html") About Us
+                    .column__data-row
+                        a.link(href="pricing.html") Pricing
+                    .column__data-row
+                        a.link(href="contact-us.html") Contact Us
+                .footer__column.column
+                    .column__header Others
+                    .column__data-row
+                        a.link(href="") Help &amp; Support
+                    .column__data-row
+                        a.link(href="") Privacy Policy
+                    .column__data-row
+                        a.link(href="") Terms
+                    .column__data-row
+                        a.link(href="") Sitemap
+                .footer__column.column
+                    .column__header Newsletter
+                    .column__description Subscribe to our newsletter and get all the cool news
+                    form.footer__email-field(action="")
+                        input.footer__email.link(type="email", placeholder="Enter Email", id="email", required)
+                        button.footer__email-submit-button &#xf473;
     section.copyright
-        .container.copyright__content
-            .copyright__caption All rights reserved 2015.
-            .copyright__socials.socials
-                a.link.socials__item.twitter(href="http://twitter.com", title="Our Twitter") &#xf243;
-                a.link.socials__item.facebook(href="http://facebook.com", title="Our Facebook") &#xf231;
-                a.link.socials__item.instagram(href="http://instagram.com", title="Our Instagram") &#xf351;
-                a.link.socials__item.dribbble(href="http://dribbble.com", title="Our Dribbble") &#xf22c;
-                a.link.socials__item.github(href="http://github.com", title="Our Github") &#xf4e8;
+        .container
+            .copyright__content
+                .copyright__caption All rights reserved 2015.
+                .copyright__socials.socials
+                    a.link.socials__item.twitter(href="http://twitter.com", title="Our Twitter") &#xf243;
+                    a.link.socials__item.facebook(href="http://facebook.com", title="Our Facebook") &#xf231;
+                    a.link.socials__item.instagram(href="http://instagram.com", title="Our Instagram") &#xf351;
+                    a.link.socials__item.dribbble(href="http://dribbble.com", title="Our Dribbble") &#xf22c;
+                    a.link.socials__item.github(href="http://github.com", title="Our Github") &#xf4e8;
