--- a/src/pages/contact-us.pug
+++ b/src/pages/contact-us.pug
@@ -6,91 +6,96 @@ head
     link(rel='stylesheet', type='text/css', href='styles/main.css')
 body
     section.header.header_sticky.header_light-bg
-        .container.header__content
-            .header__left
-                .header__company-name.header__company-name_dark Wapik
-                .header__phone-number.header__phone-number_dark
-                    span.header__phone-icon.header__phone-icon_dark &#xf4b9;
-                    |+62 202 555 0117
-            .header__right
-                .header__navigation
-                    ul.navigation.navigation_dark
-                        li.navigation__item
-                            a.link(href='index.html') Home
-                        li.navigation__item
-                            a.link(href='about-us.html') About us
-                        li.navigation__item
-                            a.link(href='pricing.html') Pricing
-                        li.navigation__item
-                            a.link(href='contact-us.html') Contact us
-                        button.header__get-started-button.button.header__get-started-button_green.button_hover-green(name='Get started',value='Get started') Get started
+        .container
+            .header__content
+                .header__left
+                    .header__company-name.header__company-name_dark Wapik
+                    .header__phone-number.header__phone-number_dark
+                        span.header__phone-icon.header__phone-icon_dark &#xf4b9;
+                        |+62 202 555 0117
+                .header__right
+                    .header__navigation
+                        ul.navigation.navigation_dark
+                            li.navigation__item
+                                a.link(href='index.html') Home
+                            li.navigation__item
+                                a.link(href='about-us.html') About us
+                            li.navigation__item
+                                a.link(href='pricing.html') Pricing
+                            li.navigation__item
+                                a.link(href='contact-us.html') Contact us
+                            button.header__get-started-button.button.header__get-started-button_green.button_hover-green(name='Get started',value='Get started') Get started
     section.masthead-map
         iframe.masthead-map__content(src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9406.191369661386!2d27.609909!3d53.886466!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x817b228ea6dc30f0!2z0KHRgtC-0YDQvNC90Y3RgiDQotC10LrQvdC-0LvQvtC00LbQuNGBIChTdG9ybW5ldCk!5e0!3m2!1sru!2sby!4v1523645722435", frameborder="0", allowfullscreen)
     section.feedback
-        .container.feedback__content
-            .section__heading
-                .section__title Get In Touch With Us
-                .section__underline
-                .section__description We are here to help. Want to learn more about our services? Please get in touch, we'd love to hear from you!
-            .feedback__info
-                form.feedback__form
-                    input.feedback__form-item(type="text", placeholder="Name", required)
-                    input.feedback__form-item(type="email", name="", placeholder="Email", required)
-                    input.feedback__form-item(type="tel", name="", placeholder="Phone", required)
-                    textarea.feedback__form-item(name="", cols="30", rows="3", placeholder="Message", required)
-                    input.button.feedback__send-message-button.button_green.button_hover-green(type="submit",value="Send message")
-                .feedback__headquarter.headquarter
-                    .headquarter__content
-                        .headquarter__header Headquarter
-                        .headquarter__address 610 Overlook Circle Suite 323 Kalamazoo, MI 49009
-                        .headquarter__phone-number +62 202 555 0117
-                        .headquarter__email hi@wapik.com
+        .container
+            .feedback__content
+                .section__heading
+                    .section__title Get In Touch With Us
+                    .section__underline
+                    .section__description We are here to help. Want to learn more about our services? Please get in touch, we'd love to hear from you!
+                .feedback__info
+                    form.feedback__form
+                        input.feedback__form-item(type="text", placeholder="Name", required)
+                        input.feedback__form-item(type="email", name="", placeholder="Email", required)
+                        input.feedback__form-item(type="tel", name="", placeholder="Phone", required)
+                        textarea.feedback__form-item(name="", cols="30", rows="3", placeholder="Message", required)
+                        input.button.feedback__send-message-button.button_green.button_hover-green(type="submit",value="Send message")
+                    .feedback__headquarter.headquarter
+                        .headquarter__content
+                            .headquarter__header Headquarter
+                            .headquarter__address 610 Overlook Circle Suite 323 Kalamazoo, MI 49009
+                            .headquarter__phone-number +62 202 555 0117
+                            .headquarter__email hi@wapik.com
     section.call-to-action
-        .container.call-to-action__content
-            .call-to-action__caption
-                .call-to-action__header Do You Like Wapik? Download it Now
-                .call-to-action__description Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.
-            button.button.call-to-action__download-button.button_green.button_hover-green(name="Download now", value="Download now") download now! - FREE forever
+        .container
+            .call-to-action__content
+                .call-to-action__caption
+                    .call-to-action__header Do You Like Wapik? Download it Now
+                    .call-to-action__description Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.
+                button.button.call-to-action__download-button.button_green.button_hover-green(name="Download now", value="Download now") download now! - FREE forever
     section.footer
-        .container.footer__content
-            .footer__column.column
-                .column__header Wapik
-                .column__data-row @: 
-                    span.column__email-address hi@wapik.com
-                .column__data-row p: +62 202 555 0117
-                .column__data-row.address a: 610 Overlook Circle Suite 323 Kalamazoo, MI 49009
-            .footer__column.column
-                .column__header Company
-                .column__data-row
-                    a.link(href="/") Home
-                .column__data-row
-                    a.link(href="about-us.html") About Us
-                .column__data-row
-                    a.link(href="pricing.html") Pricing
-                .column__data-row
-                    a.link(href="contact-us.html") Contact Us
-            .footer__column.column
-                .column__header Others
-                .column__data-row
-                    a.link(href="") Help &amp; Support
-                .column__data-row
-                    a.link(href="") Privacy Policy
-                .column__data-row
-                    a.link(href="") Terms
-                .column__data-row
-                    a.link(href="") Sitemap
-            .footer__column.column
-                .column__header Newsletter
-                .column__description Subscribe to our newsletter and get all the cool news
-                form.footer__email-field(action="")
-                    input.footer__email.link(type="email", placeholder="Enter Email", id="email")
-                    button.footer__email-submit-button &#xf473;
+        .container
+            .footer__content
+                .footer__column.column
+                    .column__header Wapik
+                    .column__data-row @: 
+                        span.column__email-address hi@wapik.com
+                    .column__data-row p: +62 202 555 0117
+                    .column__data-row.address a: 610 Overlook Circle Suite 323 Kalamazoo, MI 49009
+                .footer__column.column
+                    .column__header Company
+                    .column__data-row
+                        a.link(href="/") Home
+                    .column__data-row
+                        a.link(href="about-us.html") About Us
+                    .column__data-row
+                        a.link(href="pricing.html") Pricing
+                    .column__data-row
+                        a.link(href="contact-us.html") Contact Us
+                .footer__column.column
+                    .column__header Others
+                    .column__data-row
+                        a.link(href="") Help &amp; Support
+                    .column__data-row
+                        a.link(href="") Privacy Policy
+                    .column__data-row
+                        a.link(href="") Terms
+                    .column__data-row
+                        a.link(href="") Sitemap
+                .footer__column.column
+                    .column__header Newsletter
+                    .column__description Subscribe to our newsletter and get all the cool news
+                    form.footer__email-field(action="")
+                        input.footer__email.link(type="email", placeholder="Enter Email", id="email", required)
+                        button.footer__email-submit-button &#xf473;
     section.copyright
-        .container.copyright__content
-            .copyright__caption All rights reserved 2015.
-            .copyright__socials.socials
-                a.link.socials__item.twitter(href="http://twitter.com", title="Our Twitter") &#xf243;
-                a.link.socials__item.facebook(href="http://facebook.com", title="Our Facebook") &#xf231;
-                a.link.socials__item.instagram(href="http://instagram.com", title="Our Instagram") &#xf351;
-                a.link.socials__item.dribbble(href="http://dribbble.com", title="Our Dribbble") &#xf22c;
-                a.link.socials__item.github(href="http://github.com", title="Our Github") &#xf4e8;
+        .container
+            .copyright__content
+                .copyright__caption All rights reserved 2015.
+                .copyright__socials.socials
+                    a.link.socials__item.twitter(href="http://twitter.com", title="Our Twitter") &#xf243;
+                    a.link.socials__item.facebook(href="http://facebook.com", title="Our Facebook") &#xf231;
+                    a.link.socials__item.instagram(href="http://instagram.com", title="Our Instagram") &#xf351;
+                    a.link.socials__item.dribbble(href="http://dribbble.com", title="Our Dribbble") &#xf22c;
+                    a.link.socials__item.github(href="http://github.com", title="Our Github") &#xf4e8;
