--- a/src/styles/about-us.scss
+++ b/src/styles/about-us.scss
@@ -1,5 +1,7 @@
+@import "variables";
 @import 'masthead-bg';
 @import 'flex';
+@import 'icons';
 .masthead-about-us{
     @include masthead-bg("../images/about-us-bg.png");
     &__caption{
@@ -23,5 +25,52 @@
     &__best-features{
         @include flex(space-between);
         margin-top: 100px;
+    }
+}
+
+.our-team{
+    background-color: $whitesmoke-color;
+    &__content{
+        padding: 80px 0 120px;
+    }
+    &__teammates{
+        @include flex(space-evenly);
+        margin-top: 40px;
+        .teammate{
+            flex-basis: 300px;
+            margin-right: 15px;
+            &__photo{
+                background-size: cover;
+                height: 180px;
+                margin-bottom: 20px;
+                &_first{
+                    background-image: url("../images/teammates/jhudson.png");
+                }
+                &_second{
+                    background-image: url("../images/teammates/acampbell.png");
+                }
+                &_third{
+                    background-image: url("../images/teammates/jwalker.png");
+                }
+            }
+            &__name{
+                font-size: 15px;
+                font-family: "RobotoMedium";
+                color: rgb(15, 95, 92);
+                line-height: 1.467;
+            }
+            &__position{
+                font-size: 14px;
+                font-family: "RobotoRegular";
+                color: rgb(131, 167, 165);
+                line-height: 1.571;
+            }     
+        }
+        .teammate:last-child{
+            margin-right: 0;
+        }
+        .teammate:hover{
+            box-shadow: 0 0 20px 5px rgb(36, 33, 33);
+        }
     }
 }
