--- a/src/styles/contact-us.scss
+++ b/src/styles/contact-us.scss
@@ -1,3 +1,5 @@
+@import 'icons';
+@import 'flex';
 .masthead-map{
     &__content{
         width: 100%;
@@ -64,8 +66,7 @@
         }
         &__address::before{
             content: "\f456";
-            font-family: "Icons";
-            font-size: 15px;
+            @include icons(15px);
             margin-right: 15px;
             color: rgb(111, 176, 72);
         }
@@ -74,8 +75,7 @@
         }
         &__phone-number::before{
             content: "\f4b9";
-            font-family: "Icons";
-            font-size: 15px;
+            @include icons(15px);
             margin-right: 15px;
             color: rgb(111, 176, 72);
         }
@@ -84,8 +84,7 @@
         }
         &__email::before{
             content: "\f132";
-            font-family: "Icons";
-            font-size: 15px;
+            @include icons(15px);
             margin-right: 15px;
             color: rgb(111, 176, 72);
         }
